* Notepad sample enhancements:
  - Now capable of handling Unicode text
 
All Changes
-----------
Added CDockable class
Added CDC::CreateEllipticRegion
Added CDC::CreateEllipticRegionIndirect
Added CDC::CreatePolygonRgn
Added CDC::CreatePolyPolygonRgn
Added CDC::CreateRectRgn
Added CDC::CreateRectRgnIndirect
Added CDC::DetachRegion
Added CDC::ExtCreateRegion
Added CFrame::AddToolbarButton 
Added CWnd::IsContainer
Added CWnd::IsDockable
Added CWnd::LockWindowUpdate
Added CToolbar::SetButtonWidth (useful for adding a ComboBox to a toolbar)
Added CToolbar::SetImages
Added CMDIFrame::SetActiveMDIChild 
Changed CMDIFrame::GetActiveMDIChild (it now returns a CWnd* instead of a HWND)
Removed CMDIFrame::GetActiveMDIChildCWnd
Renamed CMDIFrame::GetMDIChildVect to CMDIFrame::GetAllMDIChildren

Added the following docking styles:
DS_DOCKED_CONTAINER	
DS_DOCKED_LEFTMOST  
DS_DOCKED_RIGHTMOST 
DS_DOCKED_TOPMOST	
DS_DOCKED_BOTTOMMOST

Subclassed windows now call OnCommand and OnNotify
Exceptions now genereate TRACE output to display the error.

Fixes
-----
Various fixes to docking, including:
 - Fixed Z order of undocked windows
 - Fixed focus for child windows
 - Added Win98 and WinME support for docking
 - Improved undocking
 - Reduced flicker
 - Better sizing of docked windows 

More About Docking Containers
-----------------------------
A container can be used is a view window for a frame, MDI child, dockable etc.
It has a tab control, and is capable of containing and displaying other
containers. Each container will in turn have a view window of its own. The view 
for each container as well as it's toolbar (if any) is displayed in the tab's 
page. When used as the view window of a dockable, the container also permits
 docking and undocking of it's containers.  

In Summary:
* Any CWnd object inherrited from CContainer is capable of containing other CWnd
   objects inherrited from CContainer. There is no theoretical limit as to the